--- a/values.yaml
+++ b/values.yaml
@@ -1,6 +1,8 @@
 ## nginx configuration
 ## Ref: https://github.com/kubernetes/ingress/blob/master/controllers/nginx/configuration.md
 ##
+useRBAC: false
+
 controller:
   name: controller
   image:
