--- a/templates/controller-role-binding.yaml
+++ b/templates/controller-role-binding.yaml
@@ -1,4 +1,4 @@
-{{- if .Value.useRBAC }}
+{{- if .Values.useRBAC }}
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
 metadata:
