--- a/templates/controller-role-binding.yaml
+++ b/templates/controller-role-binding.yaml
@@ -1,6 +1,6 @@
 {{- if .Values.useRBAC }}
 apiVersion: rbac.authorization.k8s.io/v1beta1
-kind: ClusterRoleBinding
+kind: RoleBinding
 metadata:
   name: {{ template "controller.fullname" . }}
   labels:
