--- a/templates/controller-role-binding.yaml
+++ b/templates/controller-role-binding.yaml
@@ -1,6 +1,6 @@
 {{- if .Values.useRBAC }}
 apiVersion: rbac.authorization.k8s.io/v1beta1
-kind: RoleBinding
+kind: ClusterRoleBinding
 metadata:
   name: {{ template "controller.fullname" . }}
   labels:
@@ -11,7 +11,7 @@ metadata:
     release: {{ .Release.Name }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: Role
+  kind: ClusterRole
   name: {{ template "controller.fullname" . }}
 subjects:
 - kind: ServiceAccount
